--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "moduleResolution": "node",
+    "module": "node18",
+    "moduleResolution": "node16",
     "pretty": true,
     "resolveJsonModule": true,
     "sourceMap": true,
-    "target": "es2021",
+    "target": "es2024",
     "outDir": "./dist",
     "baseUrl": "./src",
     "experimentalDecorators": true,
