--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,17 @@
 {
   "compilerOptions": {
-    "module": "node18",
-    "moduleResolution": "node16",
+    "target": "esnext",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "paths": {
+      "@/*": ["src/*"]
+    },
     "pretty": true,
-    "resolveJsonModule": true,
-    "sourceMap": true,
-    "target": "es2024",
-    "outDir": "./dist",
-    "baseUrl": "./src",
-    "experimentalDecorators": true,
-    "strict": true
+    "outDir": "dist",
+    "baseUrl": ".",
+    "strict": true,
+    "esModuleInterop": true
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "src/**/*.spec.ts"]
+  "exclude": ["node_modules"]
 }
