--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
   },
   "dependencies": {
     "@google-cloud/local-auth": "^3.0.1",
+    "@playwright/browser-chromium": "^1.54.1",
     "cheerio": "^1.1.2",
+    "express": "^5.1.0",
     "google-auth-library": "^10.1.0",
     "googleapis": "^154.0.0",
-    "node-html-to-image": "^5.0.0"
+    "node-html-to-image": "^5.0.0",
+    "playwright": "^1.54.1"
   },
   "devDependencies": {
-    "@playwright/test": "^1.54.1",
+    "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.1.0",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
@@ -40,18 +43,5 @@
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
     "typescript-eslint-parser": "^22.0.0"
-  },
-  "tsup": {
-    "entry": [
-      "src",
-      "!src/**/*.spec.*"
-    ],
-    "splitting": false,
-    "sourcemap": true,
-    "clean": true,
-    "format": [
-      "esm"
-    ],
-    "dts": false
   }
 }
