--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@google-cloud/local-auth": "^3.0.1",
     "@playwright/browser-chromium": "^1.54.1",
     "cheerio": "^1.1.2",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "google-auth-library": "^10.1.0",
     "googleapis": "^154.0.0",
