--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch --clear-screen=false src/app.ts",
-    "build": "node_modules/.bin/tsup",
+    "build": "npx tsup",
     "start": "node dist/app.js",
     "lint": "eslint --fix --quiet src/**/*.ts",
     "format": "prettier --loglevel silent --write src/**/*.ts",
